--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_scouting"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_scouting" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_schedule"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_schedule" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_analysis"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_analysis" />
 
