--- a/app/src/main/res/layout/fragment_addteam.xml
+++ b/app/src/main/res/layout/fragment_addteam.xml
@@ -171,15 +171,17 @@
                 android:id="@+id/finish"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="116dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/colorPrimaryDark"
                 android:backgroundTint="@color/colorPrimary"
                 android:text="@string/finish"
                 android:textColor="@android:color/background_light"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.472"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/endParkBox" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
