Match details began, framework mostly down, but we got a big issue where the TextViews are sometimes null for no apparent reason, please stop. OOF

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/cleanse"
-        android:title="@string/delete_all" />
+        android:id="@+id/cleanseTeams"
+        android:title="@string/delete_all_teams" />
+    <item
+        android:id="@+id/cleanseMatches"
+        android:title="@string/delete_all_matches" />
     <item
         android:id="@+id/settings"
         android:title="@string/settings" />
