--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#1b5e20</color>
     <color name="colorAccent">#ffea00</color>
     <color name="white">#ffffff</color>
+    <color name="red">#cc0000</color>
+    <color name="blue">#0099cc</color>
 </resources>
