Dark theme change: eventually user can switch. Many UI changes, 0 error fixed. TODO: stupid lines are stupid thick!

--- a/app/src/main/res/layout/fragment_addmatch.xml
+++ b/app/src/main/res/layout/fragment_addmatch.xml
@@ -17,6 +17,8 @@
                 android:id="@+id/matchNumberInput"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="114dp"
+                android:layout_marginStart="114dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="Match Number"
@@ -29,8 +31,12 @@
             <Spinner
                 android:id="@+id/r1Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/line_divider2"
+                android:dropDownSelector="@color/gray"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +49,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/red_team_1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/red"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,8 +58,12 @@
             <Spinner
                 android:id="@+id/r2Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/line_divider2"
+                android:dropDownSelector="@color/gray"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,6 +76,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/red_team_2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/red"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,8 +85,12 @@
             <Spinner
                 android:id="@+id/b1Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/line_divider2"
+                android:dropDownSelector="@color/gray"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -84,19 +100,24 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/blue_team_1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/r2Spinner" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
             <Spinner
                 android:id="@+id/b2Spinner"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/line_divider2"
+                android:dropDownSelector="@color/gray"
+                android:spinnerMode="dialog"
+                android:textAlignment="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -109,6 +130,7 @@
                 android:layout_marginTop="32dp"
                 android:text="@string/blue_team_2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="@color/blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -129,6 +151,17 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/b2Spinner" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/r2Spinner"
+                app:srcCompat="@drawable/red_blue_divider" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
