--- a/app/src/main/res/layout/fragment_matchdetails.xml
+++ b/app/src/main/res/layout/fragment_matchdetails.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/matchNum"
+        android:id="@+id/number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -26,6 +26,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/matchNum" />
+        app:layout_constraintTop_toBottomOf="@id/number" />
 
 </android.support.constraint.ConstraintLayout>
