--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -29,7 +29,7 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.robertlevonyan.views.customfloatingactionbutton.FloatingActionButton
         android:id="@+id/matchesAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,8 +37,14 @@
         android:layout_marginEnd="16dp"
         android:clickable="true"
         android:focusable="true"
+        android:textSize="18sp"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:elevation="24dp"
+        app:fabIcon="@drawable/baseline_add_24"
+        app:fabIconColor="@color/white"
+        app:fabIconPosition="start"
+        app:fabSizes="normal"
+        app:fabText="Add Match"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add" />
-
+        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
