--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#1b5e20</color>
     <color name="colorAccent">#ffea00</color>
     <color name="white">#ffffff</color>
-    <color name="red">#ff1744</color>
-    <color name="blue">#039be5</color>
+    <color name="red">#FF1744</color>
+    <color name="blue">#039BE5</color>
     <color name="colorDivider">#66bb6a</color>
     <color name="gray">#616161</color>
     <color name="transparent">#00ffffff</color>
